tests/valid_inputs/unary_decrement.cpp
// test that unary decrement work on int

int main() {
	int a = 43;
	return --a;
}
