tests/invalid_inputs/sema/void_ptr_predecr.cpp
// test that predecrement doesn't work with void pointers

void f() {
	void *p;
	--p;
}
